--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=Pratico
+spring.application.name=SD_23-24
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_pratico
+spring.datasource.username=sd
+spring.datasource.password=sd
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
