--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_pratico
 spring.datasource.username=sd
 spring.datasource.password=sd
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+
+spring.jpa.open-in-view=false
