--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation("com.google.guava:guava:24.0-jre")
+	implementation 'org.webjars:chartjs:2.9.4'
 }
 
 tasks.named('test') {
